--- a/totalCenter/index.html
+++ b/totalCenter/index.html
@@ -7,8 +7,11 @@
     <title>totalCenter</title>
     <link rel="stylesheet" href="lib/css/style.css">
 </head>
-<body>
+<body> 
     <!-- Thanks to https://useiconic.com/open -->
+    <div class="Image">
+        <!-- <img src="C:\Users\ASC Student\Documents\ASCStuf2018\week2.day2.layouts\totalCenter\assets\shoes.jpg" alt="Shoes"> -->
+    </div>
     <div class="center_content">
         <img src="assets/aperture.svg" alt="icon name">
         <h3>This content is centered!</h3>
